--- a/tumor-vision-frontend/src/styles/colors.css
+++ b/tumor-vision-frontend/src/styles/colors.css
@@ -5,7 +5,7 @@
   --primary-light: #e8f0fe;
   --primary-extra-light: #f5f9ff;
 
-  /* Status Colors */
+  /* Status Color*/
   --success: #34a853;
   --error: #d32f2f;
   --warning: #f9ab00;
