--- a/tumor-vision-frontend/src/styles/colors.css
+++ b/tumor-vision-frontend/src/styles/colors.css
@@ -10,7 +10,7 @@
   --error: #d32f2f;
   --warning: #f9ab00;
   
-  /* Backgrounds color*/
+  /* Backgrounds colors*/
   --background: #f8f9fa;
   --surface: #ffffff;
   --surface-dark: #f1f3f4;
