--- a/tumor-vision-frontend/src/styles/landing.css
+++ b/tumor-vision-frontend/src/styles/landing.css
@@ -18,6 +18,9 @@
     margin: 0 auto;
     padding: 0 2rem;
   }
+  .container h1{
+color: white !important;
+  }
   
   /*heading */
   .hero-content h1 {
